[package]
name = "logseq-webview"
version = "0.1.0"
edition = "2021"

[dependencies]
ammonia = "4.1.3"
axum = "0.8.9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
comrak = { version = "0.54.0", default-features = false, features = ["syntect"] }
dotenvy = "0.15"
percent-encoding = "2.3.2"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
